--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -4,7 +4,18 @@
     android:id="@+id/content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/black"
     tools:context="com.ejemplos.dam.procesossimultaneos.FullscreenActivity">
+
+    <ImageView
+        android:id="@+id/ciudad"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginTop="136dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_cityscape" />
 
     <ImageView
         android:id="@+id/circulo"
@@ -16,6 +27,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.873"
         app:srcCompat="@drawable/circulo" />
 
     <ImageView
@@ -26,8 +38,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/cuadrado"
         app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toEndOf="@+id/circulo"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.873"
         app:srcCompat="@drawable/triangulo" />
 
     <ImageView
@@ -40,6 +55,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/triangulo"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.873"
         app:srcCompat="@drawable/cuadrado" />
 
 </android.support.constraint.ConstraintLayout>
